--- a/manifests/r/RemNote/RemNote/1.8.19/RemNote.RemNote.installer.yaml
+++ b/manifests/r/RemNote/RemNote/1.8.19/RemNote.RemNote.installer.yaml
@@ -4,11 +4,12 @@
 PackageIdentifier: RemNote.RemNote
 PackageVersion: 1.8.19
 MinimumOSVersion: 10.0.0.0
-InstallerType: nullsoft
+InstallerType: nullsoft # electron-builder
 Scope: user
 InstallerSwitches:
   Upgrade: --updated
 UpgradeBehavior: install
+ReleaseDate: 2022-08-31
 Installers:
 - Architecture: x86
   InstallerUrl: https://download.remnote.io/RemNote%20Setup%201.8.19.exe
