--- a/manifests/t/TeamViewer/TeamViewer/Host/15.33.7/TeamViewer.TeamViewer.Host.installer.yaml
+++ b/manifests/t/TeamViewer/TeamViewer/Host/15.33.7/TeamViewer.TeamViewer.Host.installer.yaml
@@ -1,8 +1,8 @@
-# Created with YamlCreate.ps1 v2.1.2 $debug=AUSU.7-2-5
-# yaml-language-server: $schema=https://aka.ms/winget-manifest.installer.1.1.0.schema.json
+# Created with YamlCreate.ps1 v2.1.3 $debug=QUSU.7-2-6
+# yaml-language-server: $schema=https://aka.ms/winget-manifest.installer.1.2.0.schema.json
 
 PackageIdentifier: TeamViewer.TeamViewer.Host
-PackageVersion: 15.32.3
+PackageVersion: 15.33.7
 Platform:
 - Windows.Desktop
 MinimumOSVersion: 10.0.0.0
@@ -15,6 +15,6 @@ UpgradeBehavior: install
 Installers:
 - Architecture: x86
   InstallerUrl: https://dl.teamviewer.com/download/version_15x/TeamViewer_Host_Setup.exe
-  InstallerSha256: 81EB51754A9A3733132ABB0BB532D9C4ABE23EA2E5B56F753C7B4F3551DE971E
+  InstallerSha256: DDE6413D38548670DEC19E5F828AAC74384A89430AD9E2E6450B59D04547D7FC
 ManifestType: installer
-ManifestVersion: 1.1.0
+ManifestVersion: 1.2.0
