--- a/manifests/t/TeamViewer/TeamViewer/Host/15.33.7/TeamViewer.TeamViewer.Host.locale.en-US.yaml
+++ b/manifests/t/TeamViewer/TeamViewer/Host/15.33.7/TeamViewer.TeamViewer.Host.locale.en-US.yaml
@@ -1,8 +1,8 @@
-# Created with YamlCreate.ps1 v2.1.2 $debug=AUSU.7-2-5
-# yaml-language-server: $schema=https://aka.ms/winget-manifest.defaultLocale.1.1.0.schema.json
+# Created with YamlCreate.ps1 v2.1.3 $debug=QUSU.7-2-6
+# yaml-language-server: $schema=https://aka.ms/winget-manifest.defaultLocale.1.2.0.schema.json
 
 PackageIdentifier: TeamViewer.TeamViewer.Host
-PackageVersion: 15.32.3
+PackageVersion: 15.33.7
 PackageLocale: en-US
 Publisher: TeamViewer
 PublisherUrl: https://www.teamviewer.com
@@ -30,5 +30,8 @@ Tags:
 # Agreements: 
 # ReleaseNotes: 
 # ReleaseNotesUrl: 
+# PurchaseUrl: 
+# InstallationNotes: 
+# Documentations: 
 ManifestType: defaultLocale
-ManifestVersion: 1.1.0
+ManifestVersion: 1.2.0
