--- a/manifests/t/TeamViewer/TeamViewer/15.33.7/TeamViewer.TeamViewer.installer.yaml
+++ b/manifests/t/TeamViewer/TeamViewer/15.33.7/TeamViewer.TeamViewer.installer.yaml
@@ -1,8 +1,8 @@
-# Created with YamlCreate.ps1 v2.1.2 $debug=AUSU.7-2-5
-# yaml-language-server: $schema=https://aka.ms/winget-manifest.installer.1.1.0.schema.json
+# Created with YamlCreate.ps1 v2.1.3 $debug=QUSU.7-2-6
+# yaml-language-server: $schema=https://aka.ms/winget-manifest.installer.1.2.0.schema.json
 
 PackageIdentifier: TeamViewer.TeamViewer
-PackageVersion: 15.32.3
+PackageVersion: 15.33.7
 Platform:
 - Windows.Desktop
 MinimumOSVersion: 10.0.0.0
@@ -15,9 +15,9 @@ UpgradeBehavior: install
 Installers:
 - Architecture: x64
   InstallerUrl: https://download.teamviewer.com/download/TeamViewer_Setup_x64.exe
-  InstallerSha256: 5382C8F1BA894CA640BAC19559D50AEE07A5C4255028CE83BCDD642957EA3E1A
+  InstallerSha256: FCCEF4DD9B654F98C100AB41A8E7E01D6257D496827CAA740097E8A82E3E2054
 - Architecture: x86
   InstallerUrl: https://download.teamviewer.com/download/TeamViewer_Setup.exe
-  InstallerSha256: 61D7BFCEF7B4E9D5E40604B53421206EC8B7E8EFB86FB0B547267FE308016CDE
+  InstallerSha256: F2AA91FECCEA466BD9C0440DB1ADE6E16B10F42897E30431996FC4D02ED500F5
 ManifestType: installer
-ManifestVersion: 1.1.0
+ManifestVersion: 1.2.0
