--- a/manifests/t/TeamViewer/TeamViewer/15.33.7/TeamViewer.TeamViewer.locale.de-DE.yaml
+++ b/manifests/t/TeamViewer/TeamViewer/15.33.7/TeamViewer.TeamViewer.locale.de-DE.yaml
@@ -1,8 +1,8 @@
-# Created with YamlCreate.ps1 v2.1.2 $debug=AUSU.7-2-5
-# yaml-language-server: $schema=https://aka.ms/winget-manifest.locale.1.1.0.schema.json
+# Created with YamlCreate.ps1 v2.1.3 $debug=QUSU.7-2-6
+# yaml-language-server: $schema=https://aka.ms/winget-manifest.locale.1.2.0.schema.json
 
 PackageIdentifier: TeamViewer.TeamViewer
-PackageVersion: 15.32.3
+PackageVersion: 15.33.7
 PackageLocale: de-DE
 Publisher: TeamViewer
 PublisherUrl: https://www.teamviewer.com/de/
@@ -31,5 +31,8 @@ Tags:
 # Agreements: 
 # ReleaseNotes: 
 # ReleaseNotesUrl: 
+# PurchaseUrl: 
+# InstallationNotes: 
+# Documentations: 
 ManifestType: locale
-ManifestVersion: 1.1.0
+ManifestVersion: 1.2.0
