--- a/manifests/m/MongoDB/Compass/Full/1.33.0.0/MongoDB.Compass.Full.installer.yaml
+++ b/manifests/m/MongoDB/Compass/Full/1.33.0.0/MongoDB.Compass.Full.installer.yaml
@@ -14,5 +14,6 @@ Installers:
 - Architecture: x64
   InstallerUrl: https://downloads.mongodb.com/compass/mongodb-compass-1.33.0-win32-x64.msi
   InstallerSha256: 757946271783957A2DC81A56E9A9FBBB6918FB81E90673FB684DE6AC6A6B8B8A
+  ProductCode: '{62414327-9AC0-4D46-927E-287914B40AD8}'
 ManifestType: installer
 ManifestVersion: 1.2.0
