--- a/manifests/c/chrisant996/Clink/1.3.42.ef446e/chrisant996.Clink.installer.yaml
+++ b/manifests/c/chrisant996/Clink/1.3.42.ef446e/chrisant996.Clink.installer.yaml
@@ -15,10 +15,10 @@ Installers:
 - Architecture: x64
   InstallerUrl: https://github.com/chrisant996/clink/releases/download/v1.3.42/clink.1.3.42.ef446e_setup.exe
   InstallerSha256: 516B7514CA99D322B957AD2E5248F0C0B16717FFDC5325F97406CAE93B7111E2
-  ProductCode: clink_1.3.40.1901c2
+  ProductCode: clink_1.3.42.ef446e
 - Architecture: x86
   InstallerUrl: https://github.com/chrisant996/clink/releases/download/v1.3.42/clink.1.3.42.ef446e_setup.exe
   InstallerSha256: 516B7514CA99D322B957AD2E5248F0C0B16717FFDC5325F97406CAE93B7111E2
-  ProductCode: clink_1.3.40.1901c2
+  ProductCode: clink_1.3.42.ef446e
 ManifestType: installer
 ManifestVersion: 1.2.0
