--- a/manifests/3/3ll3d00d/beqdesigner/0.9.5/3ll3d00d.beqdesigner.installer.yaml
+++ b/manifests/3/3ll3d00d/beqdesigner/0.9.5/3ll3d00d.beqdesigner.installer.yaml
@@ -3,6 +3,7 @@
 
 PackageIdentifier: 3ll3d00d.beqdesigner
 PackageVersion: 0.9.5
+InstallerType: nullsoft
 Installers:
 - Architecture: x64
   Scope: machine
