--- a/manifests/g/GorillaDevs/GDLauncher/1.1.29/GorillaDevs.GDLauncher.installer.yaml
+++ b/manifests/g/GorillaDevs/GDLauncher/1.1.29/GorillaDevs.GDLauncher.installer.yaml
@@ -1,4 +1,4 @@
-# Created with YamlCreate.ps1 v2.1.3 using InputObject 🤖 $debug=QUSU.7-2-6
+# Created with YamlCreate.ps1 v2.1.5 $debug=QUSU.CRLF.7-2-6.Win32NT
 # yaml-language-server: $schema=https://aka.ms/winget-manifest.installer.1.2.0.schema.json
 
 PackageIdentifier: GorillaDevs.GDLauncher
@@ -15,7 +15,7 @@ InstallerSwitches:
 UpgradeBehavior: install
 ReleaseDate: 2022-08-28
 AppsAndFeaturesEntries:
-- DisplayName: GDLauncher 1.1.27
+- DisplayName: GDLauncher 1.1.29
   ProductCode: 916a734d-6952-56dd-9bc1-8fe0631126cf
 Installers:
 - Architecture: x64
