Update: OpenJS.NodeJS.Nightly version 19.0.0

--- a/manifests/o/OpenJS/NodeJS/Nightly/19.0.0/OpenJS.NodeJS.Nightly.installer.yaml
+++ b/manifests/o/OpenJS/NodeJS/Nightly/19.0.0/OpenJS.NodeJS.Nightly.installer.yaml
@@ -1,4 +1,4 @@
-# Created with YamlCreate.ps1 v2.1.4 $debug=QUSU.7-2-6
+# Created with YamlCreate.ps1 v2.1.5 $debug=QUSU.CRLF.7-2-6.Win32NT
 # yaml-language-server: $schema=https://aka.ms/winget-manifest.installer.1.2.0.schema.json
 
 PackageIdentifier: OpenJS.NodeJS.Nightly
@@ -16,12 +16,12 @@ Commands:
 - npm
 Installers:
 - Architecture: x64
-  InstallerUrl: https://nodejs.org/download/nightly/v19.0.0-nightly20220901f36813c598/node-v19.0.0-nightly20220901f36813c598-x64.msi
-  InstallerSha256: 598E3B37F0889E53BDAF586EC2C71BFE1354320EEDC00A6F4B00C97160F712E3
-  ProductCode: '{BE836FD0-79ED-4AB0-86E2-C49D623AB54F}'
+  InstallerUrl: https://nodejs.org/download/nightly/v19.0.0-nightly202209034b17d8838a/node-v19.0.0-nightly202209034b17d8838a-x64.msi
+  InstallerSha256: 0143C828E837D04805C20DB744620A7801294F97BD898E012952BB83E921AEB3
+  ProductCode: '{A9587B9B-15A8-4A7E-810B-71F20ED3B68F}'
 - Architecture: x86
-  InstallerUrl: https://nodejs.org/download/nightly/v19.0.0-nightly20220901f36813c598/node-v19.0.0-nightly20220901f36813c598-x86.msi
-  InstallerSha256: 6CEC7ED96FF0D77D04376649686F5AEEE6C87F203C6E53A8B08D87937E43AB7B
-  ProductCode: '{4D242F5A-9F4F-489B-B795-F919C5F86FC2}'
+  InstallerUrl: https://nodejs.org/download/nightly/v19.0.0-nightly202209034b17d8838a/node-v19.0.0-nightly202209034b17d8838a-x86.msi
+  InstallerSha256: CA58EB898853FDD736095756C7EDB6DA8224A86F12DFC9A3AF44EF4F5DBBDF73
+  ProductCode: '{5505C658-7168-4F40-9560-69EE24194B3D}'
 ManifestType: installer
 ManifestVersion: 1.2.0
