Update: VideoLAN.VLC.Nightly version 4.0.0

--- a/manifests/v/VideoLAN/VLC/Nightly/4.0.0/VideoLAN.VLC.Nightly.installer.yaml
+++ b/manifests/v/VideoLAN/VLC/Nightly/4.0.0/VideoLAN.VLC.Nightly.installer.yaml
@@ -1,4 +1,4 @@
-# Created with YamlCreate.ps1 v2.1.4 $debug=QUSU.7-2-6
+# Created with YamlCreate.ps1 v2.1.5 $debug=QUSU.CRLF.7-2-6.Win32NT
 # yaml-language-server: $schema=https://aka.ms/winget-manifest.installer.1.2.0.schema.json
 
 PackageIdentifier: VideoLAN.VLC.Nightly
@@ -48,32 +48,32 @@ FileExtensions:
 Installers:
 - Architecture: x64
   InstallerType: wix
-  InstallerUrl: https://artifacts.videolan.org/vlc/nightly-win64/20220901-0427/vlc-4.0.0-dev-win64-c5600df3.msi
-  InstallerSha256: 3B2D7EA22B3B35CC2A6587C648789E0B10F48ACC31B4F78FA69B2275120102B3
-  ProductCode: '{8CDBC8AA-CD29-4358-9659-602AEB22193A}'
+  InstallerUrl: https://artifacts.videolan.org/vlc/nightly-win64/20220903-0425/vlc-4.0.0-dev-win64-84ef4614.msi
+  InstallerSha256: F3652A117BFE6CA1B4A7845D5A9E8EF7DABD309FE5BC40518BEF5F7A20E9429A
+  ProductCode: '{1D81BF82-8522-4BE5-9420-356F7D4FB996}'
   AppsAndFeaturesEntries:
   - DisplayName: VLC media player
     DisplayVersion: 4.0.0.0
 - Architecture: x86
   InstallerType: wix
-  InstallerUrl: https://artifacts.videolan.org/vlc/nightly-win32/20220901-0420/vlc-4.0.0-dev-win32-c5600df3.msi
-  InstallerSha256: 04186462E43E4F20CAEF4F2C9BE45A704097DF0C79DAF21390C45C07C3985676
-  ProductCode: '{5CB87D5F-7518-4B2B-BA58-916C14847439}'
+  InstallerUrl: https://artifacts.videolan.org/vlc/nightly-win32/20220903-0425/vlc-4.0.0-dev-win32-84ef4614.msi
+  InstallerSha256: 63CFC0323168237FBB43889F285EB4CCB0E6199B111859C3C817F385F5A34ACA
+  ProductCode: '{57C1F1C2-2E5F-4F3D-8696-12C0AE69329B}'
   AppsAndFeaturesEntries:
   - DisplayName: VLC media player
     DisplayVersion: 4.0.0.0
 - Architecture: x64
   InstallerType: nullsoft
-  InstallerUrl: https://artifacts.videolan.org/vlc/nightly-win64/20220901-0427/vlc-4.0.0-dev-win64-c5600df3.exe
-  InstallerSha256: 8F43D63FD2C844397AC58165CAF7EC6BDE92C9A08B81AAF45FA61177D21D9231
+  InstallerUrl: https://artifacts.videolan.org/vlc/nightly-win64/20220903-0425/vlc-4.0.0-dev-win64-84ef4614.exe
+  InstallerSha256: 3B1C1125F92E12C62204F98687DD81586C0A5183755C0B99B8F2374F082FC1A1
   AppsAndFeaturesEntries:
   - DisplayName: VLC media player
     DisplayVersion: 4.0.0-dev
     ProductCode: VLC media player
 - Architecture: x86
   InstallerType: nullsoft
-  InstallerUrl: https://artifacts.videolan.org/vlc/nightly-win32/20220901-0420/vlc-4.0.0-dev-win32-c5600df3.exe
-  InstallerSha256: 39A7FA2EE87DC13812AE2B7D9FBEE6A90ABF6BC068E16C2AE3E1D1AA27AA193A
+  InstallerUrl: https://artifacts.videolan.org/vlc/nightly-win32/20220903-0425/vlc-4.0.0-dev-win32-84ef4614.exe
+  InstallerSha256: D0662B2B7D63619C149093C20BFC7363C5B6DB0BE0602599F8754575BFA9B2E3
   AppsAndFeaturesEntries:
   - DisplayName: VLC media player
     DisplayVersion: 4.0.0-dev
