Update: VideoLAN.VLC.Nightly version 3.0.18

--- a/manifests/v/VideoLAN/VLC/Nightly/3.0.18/VideoLAN.VLC.Nightly.installer.yaml
+++ b/manifests/v/VideoLAN/VLC/Nightly/3.0.18/VideoLAN.VLC.Nightly.installer.yaml
@@ -1,4 +1,4 @@
-# Created with YamlCreate.ps1 v2.1.4 $debug=QUSU.7-2-6
+# Created with YamlCreate.ps1 v2.1.5 $debug=QUSU.CRLF.7-2-6.Win32NT
 # yaml-language-server: $schema=https://aka.ms/winget-manifest.installer.1.2.0.schema.json
 
 PackageIdentifier: VideoLAN.VLC.Nightly
@@ -48,32 +48,32 @@ FileExtensions:
 Installers:
 - Architecture: x64
   InstallerType: wix
-  InstallerUrl: https://artifacts.videolan.org/vlc-3.0/nightly-win64/20220901-0226/vlc-3.0.18-rc-win64-49a27d65.msi
-  InstallerSha256: 1798EA6D8D7E430988B610E0A4EF04C6DFA0CB05DA038127133D955B206B245F
-  ProductCode: '{318EDB25-8267-443F-B8AA-C93086708FEC}'
+  InstallerUrl: https://artifacts.videolan.org/vlc-3.0/nightly-win64/20220903-0219/vlc-3.0.18-win64-c9ab8c60.msi
+  InstallerSha256: 9299E11C921B43723A5F8C992DE91F40C36A6C0117BD393440C49AFA79056186
+  ProductCode: '{92F2D6A7-1551-4496-9DFD-971512D5D85B}'
   AppsAndFeaturesEntries:
   - DisplayName: VLC media player
     DisplayVersion: 3.0.18.0
 - Architecture: x86
   InstallerType: wix
-  InstallerUrl: https://artifacts.videolan.org/vlc-3.0/nightly-win32/20220901-0223/vlc-3.0.18-rc-win32-49a27d65.msi
-  InstallerSha256: 6CC2EB6BFF0BF366673DE7C4C8464001400D9108DDC613C5DFB17FF8C72BE0D4
-  ProductCode: '{3112FBD5-83D6-4FC4-ABA6-874AF98789B6}'
+  InstallerUrl: https://artifacts.videolan.org/vlc-3.0/nightly-win32/20220903-0218/vlc-3.0.18-win32-c9ab8c60.msi
+  InstallerSha256: A8A159E750670EFB0FD7216DD4FE0F94C4435F10A33B0C2223E52D54F5894E53
+  ProductCode: '{808A73DC-B4A7-41D2-8D5A-D4B950CE2F74}'
   AppsAndFeaturesEntries:
   - DisplayName: VLC media player
     DisplayVersion: 3.0.18.0
 - Architecture: x64
   InstallerType: nullsoft
-  InstallerUrl: https://artifacts.videolan.org/vlc-3.0/nightly-win64/20220901-0226/vlc-3.0.18-rc-win64-49a27d65.exe
-  InstallerSha256: F1873B6E2EE6FCAB34D898D0F92C5217E79B6E5E82E3680EDF36EC1ACF79C698
+  InstallerUrl: https://artifacts.videolan.org/vlc-3.0/nightly-win64/20220903-0219/vlc-3.0.18-win64-c9ab8c60.exe
+  InstallerSha256: 2B180E5F3158920A5CFEF2436A71F4072B20E5AFBF54EF9086985BC7BAC89785
   AppsAndFeaturesEntries:
   - DisplayName: VLC media player
     DisplayVersion: 3.0.18-rc
     ProductCode: VLC media player
 - Architecture: x86
   InstallerType: nullsoft
-  InstallerUrl: https://artifacts.videolan.org/vlc-3.0/nightly-win32/20220901-0223/vlc-3.0.18-rc-win32-49a27d65.exe
-  InstallerSha256: 2F90CBCAAD863059C3065182507441A00F5C1806EFD4965DA838C72FE7D2B89B
+  InstallerUrl: https://artifacts.videolan.org/vlc-3.0/nightly-win32/20220903-0218/vlc-3.0.18-win32-c9ab8c60.exe
+  InstallerSha256: 8548A58237E466C8E39D0839C23810CD6AEC6CA7E6A15F39A385730C1524EE19
   AppsAndFeaturesEntries:
   - DisplayName: VLC media player
     DisplayVersion: 3.0.18-rc
