--- a/manifests/j/Joplin/Joplin/1.8.5/Joplin.Joplin.installer.yaml
+++ b/manifests/j/Joplin/Joplin/1.8.5/Joplin.Joplin.installer.yaml
@@ -4,6 +4,10 @@
 PackageIdentifier: Joplin.Joplin
 PackageVersion: 1.8.5
 MinimumOSVersion: 10.0.0.0
+InstallerType: nullsoft
+InstallerSwitches:
+  Silent: /S
+  SilentWithProgress: /S
 InstallModes:
 - interactive
 - silent
