--- a/manifests/k/karlstav/cava/0.10.4/karlstav.cava.installer.yaml
+++ b/manifests/k/karlstav/cava/0.10.4/karlstav.cava.installer.yaml
@@ -14,14 +14,14 @@ Commands:
 - cava
 ReleaseDate: 2025-02-13
 Installers:
-- Architecture: neutral
+- Architecture: x64
   InstallerUrl: https://github.com/karlstav/cava/releases/download/0.10.4/cava_win.zip
   InstallerSha256: D7A3A4FDD736D6A2B225E33BDB16EB2D13705A15C5B7A9ED3F88C88E88F6A0FB
   Dependencies:
     PackageDependencies:
     - PackageIdentifier: Microsoft.VCRedist.2012.x64
     - PackageIdentifier: Microsoft.VCRedist.2015+.x64
-- Architecture: neutral
+- Architecture: x86
   InstallerUrl: https://github.com/karlstav/cava/releases/download/0.10.4/cava_win.zip
   InstallerSha256: D7A3A4FDD736D6A2B225E33BDB16EB2D13705A15C5B7A9ED3F88C88E88F6A0FB
   Dependencies:
