--- a/manifests/z/Zen-Team/Zen-Browser/Twilight/1.7.7t/Zen-Team.Zen-Browser.Twilight.locale.en-US.yaml
+++ b/manifests/z/Zen-Team/Zen-Browser/Twilight/1.7.7t/Zen-Team.Zen-Browser.Twilight.locale.en-US.yaml
@@ -29,9 +29,9 @@ Tags:
 - zen
 ReleaseNotes: |-
   Commits
-  - 4f41aab: merge (mr. m)
-  - 22cc24e: Merge branch 'dev' of https://github.com/zen-browser/desktop into dev (mr. m)
-  - ab836eb: Fixed workspace switching (mr. m)
+  - d6acd4d: Fixed switching workspaces (mr. m)
+  - a5ae407: Refactor workspace tab transformations and update tab selection logic (mr. M)
+  - 31ef8d2: Refactor tab management and update CSS for improved layout and performance (mr. M)
 ReleaseNotesUrl: https://github.com/zen-browser/desktop/releases/tag/twilight
 Documentations:
 - DocumentLabel: About
