--- a/manifests/k/KDE/KBruch/25.03.70/KDE.KBruch.locale.zh-CN.yaml
+++ b/manifests/k/KDE/KBruch/25.03.70/KDE.KBruch.locale.zh-CN.yaml
@@ -25,7 +25,11 @@ Description: |-
   - 因式分解练习——在此练习中，您需要将所给数字因式分解为质因子。
   - 百分比练习——在此练习中，您需要计算百分比。
 # Moniker:
-# Tags:
+Tags:
+- 分数
+- 教育
+- 数学
+- 百分比
 # ReleaseNotes:
 # ReleaseNotesUrl:
 # PurchaseUrl:
