--- a/manifests/k/KDE/Glaxnimate/0.5.80/KDE.Glaxnimate.locale.zh-CN.yaml
+++ b/manifests/k/KDE/Glaxnimate/0.5.80/KDE.Glaxnimate.locale.zh-CN.yaml
@@ -5,8 +5,8 @@ PackageIdentifier: KDE.Glaxnimate
 PackageVersion: 0.5.80
 PackageLocale: zh-CN
 # Publisher:
-PublisherUrl: https://kde.org/
-PublisherSupportUrl: https://kde.org/support/
+PublisherUrl: https://kde.org/zh-cn/
+PublisherSupportUrl: https://kde.org/zh-cn/support/
 # PrivacyUrl:
 # Author:
 # PackageName:
