--- a/manifests/k/KDE/Haruna/1.3.2/KDE.Haruna.locale.en-US.yaml
+++ b/manifests/k/KDE/Haruna/1.3.2/KDE.Haruna.locale.en-US.yaml
@@ -34,7 +34,10 @@ Tags:
 - music
 - player
 - video
-# ReleaseNotes:
+ReleaseNotes: |-
+  Bugfixes:
+  - Fixed shortcuts not working with non english system language
+  - Fixed restoring playback position
 ReleaseNotesUrl: https://haruna.kde.org/blog/
 # PurchaseUrl:
 # InstallationNotes:
