--- a/manifests/c/calibre/calibre/portable/7.3.0.0/calibre.calibre.portable.locale.en-US.yaml
+++ b/manifests/c/calibre/calibre/portable/7.3.0.0/calibre.calibre.portable.locale.en-US.yaml
@@ -1,6 +1,6 @@
-# Created using WinGet Automation (CLI)
+# Created with DuckDuckStudio's Automation.
 
-# yaml-language-server: $schema=https://aka.ms/winget-manifest.defaultLocale.1.5.0.schema.json
+# yaml-language-server: $schema=https://aka.ms/winget-manifest.defaultLocale.1.9.0.schema.json
 
 PackageIdentifier: calibre.calibre.portable
 PackageVersion: 7.3.0.0
@@ -11,7 +11,7 @@ PublisherSupportUrl: https://calibre-ebook.com/help
 Author: Kovid Goyal
 PackageName: calibre portable
 PackageUrl: https://github.com/kovidgoyal/calibre
-License: GPL-3.0
+License: GNU General Public License v3.0
 LicenseUrl: https://github.com/kovidgoyal/calibre/raw/master/LICENSE
 CopyrightUrl: https://github.com/kovidgoyal/calibre/blob/master/LICENSE
 ShortDescription: Portable version of Calibre, a powerful and easy to use e-book manager
@@ -32,5 +32,5 @@ Tags:
 - library
 - mobi
 ManifestType: defaultLocale
-ManifestVersion: 1.5.0
+ManifestVersion: 1.9.0
 ReleaseNotesUrl: https://github.com/kovidgoyal/calibre/releases/tag/v7.3.0
