--- a/manifests/m/Microsoft/Sysinternals/BGInfo/4.33/Microsoft.Sysinternals.BGInfo.installer.yaml
+++ b/manifests/m/Microsoft/Sysinternals/BGInfo/4.33/Microsoft.Sysinternals.BGInfo.installer.yaml
@@ -11,5 +11,8 @@ Installers:
 - Architecture: x86
   InstallerUrl: https://live.sysinternals.com/Bginfo.exe
   InstallerSha256: 599B391980A5C9CBADD6C70BA3D5A5258DB8B9D87C68B3FE587D9DC84EFFDF63
+- Architecture: x64
+  InstallerUrl: https://live.sysinternals.com/Bginfo64.exe
+  InstallerSha256: EE2C4850E62277E5EFDED460AFD708AF22007EF5F2C2C9DAE7A699FC3DE346D0
 ManifestType: installer
 ManifestVersion: 1.9.0
