--- a/manifests/b/Biognosys/Spectronaut/19.7.250203.62635/Biognosys.Spectronaut.installer.yaml
+++ b/manifests/b/Biognosys/Spectronaut/19.7.250203.62635/Biognosys.Spectronaut.installer.yaml
@@ -30,7 +30,7 @@ FileExtensions:
 - xls
 - xml
 Dependencies:
-- PackageDependencies:
+  PackageDependencies:
   - PackageIdentifier: Microsoft.DotNet.Runtime.7
 ProductCode: '{6FA5C875-0342-45EB-A1FB-04271E65D846}_is1'
 ReleaseDate: 2025-02-03
