--- a/manifests/b/B3log/SiYuan/3.1.22/B3log.SiYuan.locale.zh-CN.yaml
+++ b/manifests/b/B3log/SiYuan/3.1.22/B3log.SiYuan.locale.zh-CN.yaml
@@ -33,6 +33,24 @@ Tags:
 - 笔记
 - 编辑器
 - 脑图
+ReleaseNotes: |-
+  概述
+  该版本改进了一些细节。
+  变更记录
+  以下是此版本中的详细变更。
+  改进功能
+  - 支持禁用 ==foo== 行级标记语法
+  - 改进停靠面板弹出
+  - 改进火狐浏览器兼容性
+  - 改进文本外观设置
+  - 改进虚拟引用内容粘贴
+  - 某些 S3 提供商不可用
+  - 改进退出聚焦定位
+  - 改进数据库日期字段相对过滤
+  - 改进块自定义属性搜索预览区域定位
+  - 改进本地文件链接粘贴
+  开发者
+  - 为 protyleSlash.callback 添加参数 nodeElement
 ReleaseNotesUrl: https://github.com/siyuan-note/siyuan/releases/tag/v3.1.22
 PurchaseUrl: https://b3log.org/siyuan/pricing.html
 ManifestType: locale
