Add ReleaseDate and fix ReleaseNotes

--- a/manifests/b/BlueStack/BlueStacks/5.21.661.1002/BlueStack.BlueStacks.locale.en-US.yaml
+++ b/manifests/b/BlueStack/BlueStacks/5.21.661.1002/BlueStack.BlueStacks.locale.en-US.yaml
@@ -20,9 +20,7 @@ Moniker: bluestacks
 Tags:
 - android
 - emulator
-ReleaseNotes: |-
-  1. A few minor improvements have been made to enhance your overall experience on BlueStacks 5.
-  Released on February 11, 2025
+ReleaseNotes: 1. A few minor improvements have been made to enhance your overall experience on BlueStacks 5.
 ReleaseNotesUrl: https://support.bluestacks.com/hc/articles/24137179422221
 ManifestType: defaultLocale
 ManifestVersion: 1.9.0
