--- a/manifests/b/BlueStack/BlueStacks/5.21.661.1002/BlueStack.BlueStacks.installer.yaml
+++ b/manifests/b/BlueStack/BlueStacks/5.21.661.1002/BlueStack.BlueStacks.installer.yaml
@@ -21,6 +21,7 @@ FileExtensions:
 - apk
 - xapk
 ProductCode: BlueStacks_nxt
+ReleaseDate: 2025-02-11
 Installers:
 - Architecture: x64
   InstallerUrl: https://ak-build.bluestacks.com/public/app-player/windows/nxt/5.21.661.1002/492f6f1f9830fafc08a2521ed7c3a57c/FullInstaller/x64/BlueStacksFullInstaller_5.21.661.1002_amd64_native.exe
