--- a/manifests/a/Arqitek/AlkataCompiler/1.0.0/Arqitek.AlkataCompiler.installer.yaml
+++ b/manifests/a/Arqitek/AlkataCompiler/1.0.0/Arqitek.AlkataCompiler.installer.yaml
@@ -9,6 +9,9 @@ NestedInstallerFiles:
 - RelativeFilePath: AlkataCompiler.exe
   PortableCommandAlias: AlkataCompiler
 ArchiveBinariesDependOnPath: true
+Dependencies:
+  PackageDependencies:
+    - PackageIdentifier: Microsoft.DotNet.DesktopRuntime.8
 Installers:
 - Architecture: neutral
   InstallerUrl: https://github.com/GoldenStarGamer/Alkata/releases/download/1.0.0/AlkataCompiler.zip
