--- a/manifests/z/Zen-Team/Zen-Browser/Twilight/false/Zen-Team.Zen-Browser.Twilight.installer.yaml
+++ b/manifests/z/Zen-Team/Zen-Browser/Twilight/false/Zen-Team.Zen-Browser.Twilight.installer.yaml
@@ -2,7 +2,7 @@
 # yaml-language-server: $schema=https://aka.ms/winget-manifest.installer.1.9.0.schema.json
 
 PackageIdentifier: Zen-Team.Zen-Browser.Twilight
-PackageVersion: 1.7.7t
+PackageVersion: 'false'
 InstallerType: exe
 InstallModes:
 - interactive
@@ -28,11 +28,11 @@ FileExtensions:
 - xhtml
 ReleaseDate: 2025-02-14
 Installers:
-- Architecture: x64
+- Architecture: x86
   InstallerUrl: https://github.com/zen-browser/desktop/releases/download/twilight/zen.installer.exe
-  InstallerSha256: 7CD91A6B1C1023D85A6C0AD1906D615189CF81DA7DD955D1B38E7D389E83BF09
+  InstallerSha256: 2F6104748490AD61A214456456FF8F7A40C98CA9910F5559A21534D560A471B8
 - Architecture: arm64
   InstallerUrl: https://github.com/zen-browser/desktop/releases/download/twilight/zen.installer-arm64.exe
-  InstallerSha256: FDDFE04DDE608E2D91E81D97017A27EBFF6908DA28EF0F3FF9CF9C5AEDCA532C
+  InstallerSha256: E94E8692B96034973CCD32F0258DB8BFB74A831F8735E9819DE659A388D11628
 ManifestType: installer
 ManifestVersion: 1.9.0
