--- a/manifests/z/Zen-Team/Zen-Browser/Twilight/false/Zen-Team.Zen-Browser.Twilight.locale.en-US.yaml
+++ b/manifests/z/Zen-Team/Zen-Browser/Twilight/false/Zen-Team.Zen-Browser.Twilight.locale.en-US.yaml
@@ -2,7 +2,7 @@
 # yaml-language-server: $schema=https://aka.ms/winget-manifest.defaultLocale.1.9.0.schema.json
 
 PackageIdentifier: Zen-Team.Zen-Browser.Twilight
-PackageVersion: 1.7.7t
+PackageVersion: 'false'
 PackageLocale: en-US
 Publisher: Mozilla
 PublisherUrl: https://zen-browser.app/
@@ -29,10 +29,10 @@ Tags:
 - zen
 ReleaseNotes: |-
   Commits
-  - 5f72835: Set gfx.canvas.accelerated.cache-size to 256 by default (Jupi) #5342
-  - 855c362: Refactor tab overflow detection and adjust workspace initialization logic (mr. M)
-  - 48879fb: Enhance workspace tab initialization and update tab toolbar on load (mr. M)
-  - 07ede1b: Add Windows acrylic support and enhance toolbar transparency styles (mr. M)
+  - 31f5762: Improve active workspace selection logic in ZenWorkspaces (mr. M)
+  - 5ace391: Fixed common bugs with workspaces (mr. M)
+  - 12e2781: Format code for better readability in ZenWorkspaces (mr. M)
+  - 786a377: Invalidate cached tabs after inserting a new pinned tab in ZenPinnedTabManager (mr. M)
 ReleaseNotesUrl: https://github.com/zen-browser/desktop/releases/tag/twilight
 Documentations:
 - DocumentLabel: About
