Add netfx3 dependency
Co-authored-by: Stephen Gillie <114952565+stephengillie@users.noreply.github.com>

--- a/manifests/i/IdeaMK/STPViewer/2.3/IdeaMK.STPViewer.installer.yaml
+++ b/manifests/i/IdeaMK/STPViewer/2.3/IdeaMK.STPViewer.installer.yaml
@@ -4,6 +4,9 @@
 PackageIdentifier: IdeaMK.STPViewer
 PackageVersion: "2.3"
 InstallerType: inno
+Dependencies:
+  WindowsFeatures:
+    - netfx3 
 Installers:
 - Architecture: x64
   InstallerUrl: https://stpviewer.com/download/stviewersetup.exe
