Update privacy url

--- a/manifests/m/Microchip/MPLABXC8CCompiler/3.0.0/Microchip.MPLABXC8CCompiler.locale.en-US.yaml
+++ b/manifests/m/Microchip/MPLABXC8CCompiler/3.0.0/Microchip.MPLABXC8CCompiler.locale.en-US.yaml
@@ -7,7 +7,7 @@ PackageLocale: en-US
 Publisher: Microchip Technology Inc.
 PublisherUrl: https://www.microchip.com/
 PublisherSupportUrl: https://www.microchip.com/en-us/support
-PrivacyUrl: https://vistrax.com/en/privacy-policy
+PrivacyUrl: https://www.microchip.com/en-us/about/legal-information/privacy-notice
 PackageName: MPLAB XC8 C Compiler
 PackageUrl: https://www.microchip.com/en-us/tools-resources/develop/mplab-xc-compilers/xc8
 License: Proprietary
