--- a/manifests/b/Bin-Huang/Chatbox/1.9.8/Bin-Huang.Chatbox.locale.zh-CN.yaml
+++ b/manifests/b/Bin-Huang/Chatbox/1.9.8/Bin-Huang.Chatbox.locale.zh-CN.yaml
@@ -5,7 +5,7 @@ PackageIdentifier: Bin-Huang.Chatbox
 PackageVersion: 1.9.8
 PackageLocale: zh-CN
 Publisher: Benn Huang
-PublisherUrl: https://chatboxai.app/zh
+PublisherUrl: https://www.bennhuang.com/
 PublisherSupportUrl: https://chatboxai.app/zh/help-center
 PrivacyUrl: https://chatboxai.app/zh/privacy
 Author: Benn Huang
