Modify: sigoden.AIChat version 0.26.0

--- a/manifests/s/sigoden/AIChat/0.26.0/sigoden.AIChat.locale.en-US.yaml
+++ b/manifests/s/sigoden/AIChat/0.26.0/sigoden.AIChat.locale.en-US.yaml
@@ -15,18 +15,20 @@ Copyright: Copyright (c) sigoden
 ShortDescription: All-in-one LLM CLI tool featuring Shell Assistant, Chat-REPL, RAG, AI tools & agents, with access to OpenAI, Claude, Gemini, Ollama, Groq, and more.
 Tags:
 - ai
-- chatbot
 - chatgpt
 - claude
 - deepseek
 - gemini
-- gpt
-- large-language-model
+- kimi
 - llama
 - llm
 - mistral
-- ollama
 - rag
+- 人工智能
+- 大语言模型
+- 聊天机器人
+- 豆包
+- 通义千问
 ReleaseNotes: |-
   New Features
   - supports override agent instructions via agent config (#1057)
