--- a/manifests/d/Deezer/Deezer/7.0.20/Deezer.Deezer.installer.yaml
+++ b/manifests/d/Deezer/Deezer/7.0.20/Deezer.Deezer.installer.yaml
@@ -3,20 +3,19 @@
 
 PackageIdentifier: Deezer.Deezer
 PackageVersion: 7.0.20
-InstallerLocale: en-US
-Platform:
-- Windows.Desktop
-InstallerType: nullsoft
+InstallerType: nullsoft # electron-builder
 Scope: user
-InstallModes:
-- silent
+InstallerSwitches:
+  Upgrade: --updated
 UpgradeBehavior: install
-ReleaseDate: 2025-01-24
-AppsAndFeaturesEntries:
-- DisplayName: Deezer 7.0.20
+FileExtensions:
+- deezer
+- dzr
+ReleaseDate: 2025-02-07
 Installers:
 - Architecture: x86
-  InstallerUrl: https://cdn-content.dzcdn.net/builds/deezer-desktop/8cF2rAuKxLcU1oMDmCYm8Uiqe19Ql0HTySLssdzLkQ9ZWHuDTp2JBtQOvdrFzWPA/win32/x86/7.0.20/DeezerDesktopSetup_7.0.20.exe
+  InstallerUrl: https://www.deezer.com/desktop/update/artifact-win32-x86-7.0.10
   InstallerSha256: 6C9DC8BCDF5CC019F55B7EDE687036B33E00ABF58B371CD2AE8C506FB2A14BBA
+  ProductCode: 67490f87-0893-5593-ae76-b1e5d0acd13f
 ManifestType: installer
 ManifestVersion: 1.9.0
