--- a/manifests/d/Deezer/Deezer/7.0.20/Deezer.Deezer.locale.en-US.yaml
+++ b/manifests/d/Deezer/Deezer/7.0.20/Deezer.Deezer.locale.en-US.yaml
@@ -6,26 +6,33 @@ PackageVersion: 7.0.20
 PackageLocale: en-US
 Publisher: Deezer
 PublisherUrl: https://www.deezer.com/
-PublisherSupportUrl: https://www.deezer.com/us/support
+PublisherSupportUrl: https://support.deezer.com/
 PrivacyUrl: https://www.deezer.com/legal/personal-datas
-# Author:
+Author: Deezer S.A.
 PackageName: Deezer
-PackageUrl: https://www.deezer.com/us/download
+PackageUrl: https://www.deezer.com/explore/download/
 License: Proprietary
 LicenseUrl: https://www.deezer.com/legal/cgu
-Copyright: Copyright (c) Deezer 2021
-# CopyrightUrl:
-ShortDescription: Deezer is a French online music streaming service.
+Copyright: © 2025 Deezer
+CopyrightUrl: https://www.deezer.com/legal/cgu
+ShortDescription: A French online music streaming service.
 # Description:
 Moniker: deezer
 Tags:
-- deezer
+- album
+- artist
+- audio
+- episode
 - music
-- music-streaming
-- streaming-service
+- playlist
+- podcast
+- radio
+- song
+- sound
+- streaming
 # ReleaseNotes:
 # ReleaseNotesUrl:
-# PurchaseUrl:
+PurchaseUrl: https://www.deezer.com/offers
 # InstallationNotes:
 # Documentations:
 ManifestType: defaultLocale
