--- a/manifests/m/Microchip/MPLABXIDE/5.50/Microchip.MPLABXIDE.installer.yaml
+++ b/manifests/m/Microchip/MPLABXIDE/5.50/Microchip.MPLABXIDE.installer.yaml
@@ -5,8 +5,8 @@ PackageIdentifier: Microchip.MPLABXIDE
 PackageVersion: "5.50"
 InstallerType: exe
 InstallerSwitches:
-  Silent: --mode unattended --unattendedmodeui none --installdir "C:\Program Files (x86)\Microchip\MPLABX\"
-  SilentWithProgress: --mode unattended --unattendedmodeui none --installdir "C:\Program Files (x86)\Microchip\MPLABX\"
+  Silent: --mode unattended --unattendedmodeui none --installdir "C:\Program Files (x86)\Microchip\MPLABX\v5.50"
+  SilentWithProgress: --mode unattended --unattendedmodeui minimal --installdir "C:\Program Files (x86)\Microchip\MPLABX\v5.50"
 Installers:
 - Architecture: x64
   InstallerUrl: https://ww1.microchip.com/downloads/en/DeviceDoc/MPLABX-v5.50-windows-installer.exe
