fix install error

--- a/manifests/m/Microchip/MPLABXC16CCompiler/2.10/Microchip.MPLABXC16CCompiler.installer.yaml
+++ b/manifests/m/Microchip/MPLABXC16CCompiler/2.10/Microchip.MPLABXC16CCompiler.installer.yaml
@@ -5,8 +5,8 @@ PackageIdentifier: Microchip.MPLABXC16CCompiler
 PackageVersion: "2.10"
 InstallerType: exe
 InstallerSwitches:
-  Silent: --mode unattended --unattendedmodeui none --installdir "C:\Program Files (x86)\Microchip\MPLABXC16\" --netservername host
-  SilentWithProgress: --mode unattended --unattendedmodeui none --installdir "C:\Program Files (x86)\Microchip\MPLABXC16\" --netservername host
+  Silent: --mode unattended --unattendedmodeui none --installdir "C:\Program Files (x86)\Microchip\MPLABXC16\v2.10" --netservername host
+  SilentWithProgress: --mode unattended --unattendedmodeui minimal --installdir "C:\Program Files (x86)\Microchip\MPLABXC16\v2.10" --netservername host
 Installers:
 - Architecture: x86
   InstallerUrl: https://ww1.microchip.com/downloads/aemDocuments/documents/DEV/ProductDocuments/SoftwareTools/xc16-v2.10-full-install-windows64-installer.exe
