--- a/manifests/m/Microchip/MPLABXC8CCompiler/3.0.0/Microchip.MPLABXC8CCompiler.installer.yaml
+++ b/manifests/m/Microchip/MPLABXC8CCompiler/3.0.0/Microchip.MPLABXC8CCompiler.installer.yaml
@@ -5,8 +5,8 @@ PackageIdentifier: Microchip.MPLABXC8CCompiler
 PackageVersion: 3.0.0
 InstallerType: exe
 InstallerSwitches:
-  Silent: --mode unattended --unattendedmodeui none --installdir "C:\Program Files (x86)\Microchip\MPLABXC8\" --netservername host
-  SilentWithProgress: --mode unattended --unattendedmodeui none --installdir "C:\Program Files (x86)\Microchip\MPLABXC8\" --netservername host
+  Silent: --mode unattended --unattendedmodeui none --installdir "C:\Program Files (x86)\Microchip\MPLABXC8\v3.0.0" --netservername host
+  SilentWithProgress: --mode unattended --unattendedmodeui minimal --installdir "C:\Program Files (x86)\Microchip\MPLABXC8\v3.0.0" --netservername host
 Installers:
 - Architecture: x64
   InstallerUrl: https://ww1.microchip.com/downloads/aemDocuments/documents/DEV/ProductDocuments/SoftwareTools/xc8-v3.00-full-install-windows-x64-installer.exe
