add product code

--- a/manifests/m/Microchip/MPLABXC8CCompiler/3.0.0/Microchip.MPLABXC8CCompiler.installer.yaml
+++ b/manifests/m/Microchip/MPLABXC8CCompiler/3.0.0/Microchip.MPLABXC8CCompiler.installer.yaml
@@ -11,5 +11,6 @@ Installers:
 - Architecture: x64
   InstallerUrl: https://ww1.microchip.com/downloads/aemDocuments/documents/DEV/ProductDocuments/SoftwareTools/xc8-v3.00-full-install-windows-x64-installer.exe
   InstallerSha256: 3A4FF248615EB35C10F044A5B62F92A85CBDD7EF824CC40EAEA86070A2B8F86F
+  ProductCode: MPLAB XC8 C Compiler
 ManifestType: installer
 ManifestVersion: 1.9.0
