--- a/manifests/m/Microchip/MPLABXC16CCompiler/2.10/Microchip.MPLABXC16CCompiler.installer.yaml
+++ b/manifests/m/Microchip/MPLABXC16CCompiler/2.10/Microchip.MPLABXC16CCompiler.installer.yaml
@@ -11,5 +11,6 @@ Installers:
 - Architecture: x86
   InstallerUrl: https://ww1.microchip.com/downloads/aemDocuments/documents/DEV/ProductDocuments/SoftwareTools/xc16-v2.10-full-install-windows64-installer.exe
   InstallerSha256: 0FC3BEB4084823D6FA5FBA8BC1832C145039588D5884251D113527CEF1DE7D2D
+  ProductCode: MPLAB XC16 C Compiler
 ManifestType: installer
 ManifestVersion: 1.9.0
