add product code

--- a/manifests/m/Microchip/MPLABXIDE/5.50/Microchip.MPLABXIDE.installer.yaml
+++ b/manifests/m/Microchip/MPLABXIDE/5.50/Microchip.MPLABXIDE.installer.yaml
@@ -11,5 +11,6 @@ Installers:
 - Architecture: x64
   InstallerUrl: https://ww1.microchip.com/downloads/en/DeviceDoc/MPLABX-v5.50-windows-installer.exe
   InstallerSha256: FBEB4F7A458C4BE9393246F45198CD9502186DFA15410373E5D811F85F852134
+  ProductCode: MPLAB X IDE v5.50
 ManifestType: installer
 ManifestVersion: 1.9.0
