--- a/manifests/k/KDE/Kate/24.12.2/KDE.Kate.installer.yaml
+++ b/manifests/k/KDE/Kate/24.12.2/KDE.Kate.installer.yaml
@@ -4,9 +4,20 @@
 PackageIdentifier: KDE.Kate
 PackageVersion: 24.12.2
 InstallerType: nullsoft
+UpgradeBehavior: install
+ProductCode: Kate
 Installers:
 - Architecture: x64
+  Scope: user
   InstallerUrl: https://cdn.kde.org/ci-builds/utilities/kate/release-24.12/windows/kate-release_24.12-8950-windows-cl-msvc2022-x86_64.exe
   InstallerSha256: 95F0D2233CF85ABD5A22EB4CD40B11AAB754362B6557DC801542CAE5513B8E5F
+  InstallerSwitches:
+    Custom: /CurrentUser
+- Architecture: x64
+  Scope: machine
+  InstallerUrl: https://cdn.kde.org/ci-builds/utilities/kate/release-24.12/windows/kate-release_24.12-8950-windows-cl-msvc2022-x86_64.exe
+  InstallerSha256: 95F0D2233CF85ABD5A22EB4CD40B11AAB754362B6557DC801542CAE5513B8E5F
+  InstallerSwitches:
+    Custom: /AllUsers
 ManifestType: installer
 ManifestVersion: 1.9.0
