--- a/manifests/m/mathworks/matlabdrive/1.9.1.1/mathworks.matlabdrive.locale.en-US.yaml
+++ b/manifests/m/mathworks/matlabdrive/1.9.1.1/mathworks.matlabdrive.locale.en-US.yaml
@@ -10,7 +10,7 @@ Publisher: MathWorks
 # PrivacyUrl:
 Author: MathWorks
 PackageName: MATLAB Drive Connector
-PackageUrl: https://www.mathworks.com/products/matlab-drive.html
+# PackageUrl: https://www.mathworks.com/products/matlab-drive.html
 License: Proprietary
 # LicenseUrl:
 Copyright: Copyright (c) mathworks
