--- a/manifests/i/Iconscout/Iconscout/1.0.1/Iconscout.Iconscout.locale.en-US.yaml
+++ b/manifests/i/Iconscout/Iconscout/1.0.1/Iconscout.Iconscout.locale.en-US.yaml
@@ -6,7 +6,7 @@ PackageVersion: 1.0.1
 PackageLocale: en-US
 Publisher: Iconscout
 PublisherUrl: https://iconscout.com
-PublisherSupportUrl: https://support.iconscout.com/en/
+# PublisherSupportUrl: https://support.iconscout.com/en/
 PrivacyUrl: https://iconscout.com/legal/privacy-policy
 Author: Iconscout
 PackageName: Iconscout
