add elevation requirement

--- a/manifests/n/Nvidia/App/11.0.2.312/Nvidia.App.installer.yaml
+++ b/manifests/n/Nvidia/App/11.0.2.312/Nvidia.App.installer.yaml
@@ -6,6 +6,7 @@ PackageVersion: 11.0.2.312
 InstallerType: exe
 InstallerSwitches:
   Silent: -s
+ElevationRequirement: elevationRequired
 Installers:
 - Architecture: x64
   InstallerUrl: https://de.download.nvidia.com/nvapp/client/11.0.2.312/NVIDIA_app_v11.0.2.312.exe
