--- a/manifests/m/mathworks/matlabdrive/2025.2.2.1/mathworks.matlabdrive.locale.en-US.yaml
+++ b/manifests/m/mathworks/matlabdrive/2025.2.2.1/mathworks.matlabdrive.locale.en-US.yaml
@@ -5,12 +5,12 @@ PackageIdentifier: mathworks.matlabdrive
 PackageVersion: 2025.2.2.1
 PackageLocale: en-US
 Publisher: MathWorks
-PublisherUrl: https://www.mathworks.com
-PublisherSupportUrl: https://www.mathworks.com/help
-PrivacyUrl: https://www.mathworks.com/company/aboutus/policies_statements.html
+# PublisherUrl: https://www.mathworks.com
+# PublisherSupportUrl: https://www.mathworks.com/help
+# PrivacyUrl: https://www.mathworks.com/company/aboutus/policies_statements.html
 Author: MathWorks
 PackageName: MATLAB Connector
-PackageUrl: https://www.mathworks.com/products/matlab-drive.html
+# PackageUrl: https://www.mathworks.com/products/matlab-drive.html
 License: Proprietary
 # LicenseUrl:
 Copyright: Copyright (c) mathworks
