--- a/manifests/n/NoMoreFood/PuTTY-CAC/0.83.0.0/NoMoreFood.PuTTY-CAC.installer.yaml
+++ b/manifests/n/NoMoreFood/PuTTY-CAC/0.83.0.0/NoMoreFood.PuTTY-CAC.installer.yaml
@@ -33,7 +33,7 @@ Installers:
   Architecture: arm64
   InstallerType: wix
   Scope: machine
-  InstallerUrl: https://github.com/NoMoreFood/putty-cac/raw/0.83/binaries/puttycac-0.83-arm64.msi
+  InstallerUrl: https://github.com/NoMoreFood/putty-cac/raw/0.83/binaries/puttycac-0.83-Arm64.msi
   InstallerSha256: 0F8AAC28CE61B24FB0D8139A8F92778C266627E5F20FB62288DD33F80768993B
   UpgradeBehavior: install
   ProductCode: '{C27044A2-4846-44CD-9487-8740988E81CE}'
@@ -41,7 +41,7 @@ Installers:
   Architecture: arm
   InstallerType: wix
   Scope: machine
-  InstallerUrl: https://github.com/NoMoreFood/putty-cac/raw/0.83/binaries/puttycac-0.83-arm.msi
+  InstallerUrl: https://github.com/NoMoreFood/putty-cac/raw/0.83/binaries/puttycac-0.83-Arm.msi
   InstallerSha256: 39044B867710044CBAC3890B7906461F16B71B4BD2EA4713BCAD2067B2009A43
   UpgradeBehavior: install
   ProductCode: '{710C0264-60CD-4EDB-AAB1-663D3F83763F}'
