--- a/manifests/k/KDE/Kontact/master/KDE.Kontact.installer.yaml
+++ b/manifests/k/KDE/Kontact/master/KDE.Kontact.installer.yaml
@@ -1,4 +1,4 @@
-# Created with YamlCreate.ps1 v2.4.3 $debug=NVS1.CRLF.7-4-6.Win32NT
+# Created with YamlCreate.ps1 Dumplings Mod
 # yaml-language-server: $schema=https://aka.ms/winget-manifest.installer.1.9.0.schema.json
 
 PackageIdentifier: KDE.Kontact
@@ -9,14 +9,14 @@ ProductCode: Kontact
 Installers:
 - Architecture: x64
   Scope: user
-  InstallerUrl: https://cdn.kde.org/ci-builds/pim/kontact/master/windows/kontact-master-1675-windows-cl-msvc2022-x86_64.exe
-  InstallerSha256: D2EA28367F9DC3B29D29C4A05DFB9D0BA13C68E39ED2D9773DAB5E489D65241D
+  InstallerUrl: https://cdn.kde.org/ci-builds/pim/kontact/master/windows/kontact-master-1678-windows-cl-msvc2022-x86_64.exe
+  InstallerSha256: B94A1BFFD9B2DB9AF341773F1371A79B7CB6BD881A0FBF9602698BB552EE4A0A
   InstallerSwitches:
     Custom: /CurrentUser
 - Architecture: x64
   Scope: machine
-  InstallerUrl: https://cdn.kde.org/ci-builds/pim/kontact/master/windows/kontact-master-1675-windows-cl-msvc2022-x86_64.exe
-  InstallerSha256: D2EA28367F9DC3B29D29C4A05DFB9D0BA13C68E39ED2D9773DAB5E489D65241D
+  InstallerUrl: https://cdn.kde.org/ci-builds/pim/kontact/master/windows/kontact-master-1678-windows-cl-msvc2022-x86_64.exe
+  InstallerSha256: B94A1BFFD9B2DB9AF341773F1371A79B7CB6BD881A0FBF9602698BB552EE4A0A
   InstallerSwitches:
     Custom: /AllUsers
 ManifestType: installer
