--- a/manifests/n/NTKERNEL/WireSockVPNClient/2.2.1/NTKERNEL.WireSockVPNClient.installer.yaml
+++ b/manifests/n/NTKERNEL/WireSockVPNClient/2.2.1/NTKERNEL.WireSockVPNClient.installer.yaml
@@ -3,6 +3,7 @@
 
 PackageIdentifier: NTKERNEL.WireSockVPNClient
 PackageVersion: 2.2.1
+InstallerLocale: en-US
 InstallerType: exe
 InstallModes:
 - silent
