--- a/manifests/m/MAXQDA/MAXQDA/Reader/24.7.0/MAXQDA.MAXQDA.Reader.installer.yaml
+++ b/manifests/m/MAXQDA/MAXQDA/Reader/24.7.0/MAXQDA.MAXQDA.Reader.installer.yaml
@@ -1,12 +1,11 @@
-# Created using wingetcreate 1.6.1.0
+# Created using wingetcreate 1.9.4.0
 # yaml-language-server: $schema=https://aka.ms/winget-manifest.installer.1.9.0.schema.json
 
 PackageIdentifier: MAXQDA.MAXQDA.Reader
 PackageVersion: 24.7.0
-MinimumOSVersion: 7.0.0.0
-InstallerType: msi
-Scope: machine
+InstallerType: wix
 UpgradeBehavior: install
+Scope: machine
 ProductCode: '{E45A3D0A-A89D-4A8A-8D72-6009A96C3D78}'
 AppsAndFeaturesEntries:
 - DisplayName: MAXQDA 24 Reader (64 bit)
