Switch MSI to WIX

--- a/manifests/m/MAXQDA/MAXQDA/24.7.0/MAXQDA.MAXQDA.locale.en-US.yaml
+++ b/manifests/m/MAXQDA/MAXQDA/24.7.0/MAXQDA.MAXQDA.locale.en-US.yaml
@@ -1,4 +1,4 @@
-# Created using wingetcreate 1.6.1.0
+# Created using wingetcreate 1.9.4.0
 # yaml-language-server: $schema=https://aka.ms/winget-manifest.defaultLocale.1.9.0.schema.json
 
 PackageIdentifier: MAXQDA.MAXQDA
@@ -9,7 +9,7 @@ PublisherUrl: https://www.maxqda.com/products/maxqda
 PublisherSupportUrl: https://www.maxqda.com/onlinesupport
 PrivacyUrl: https://www.maxqda.com/privacy
 Author: MAXQDA
-PackageName: MAXQDA Reader
+PackageName: MAXQDA
 PackageUrl: https://www.maxqda.com/products/maxqda
 License: Proprietary
 Copyright: Copyright © 1995 - 2024, MAXQDA - Distribution by VERBI GmbH. All Rights Reserved.
