--- a/manifests/m/MAXQDA/MAXQDA/24.7.0/MAXQDA.MAXQDA.installer.yaml
+++ b/manifests/m/MAXQDA/MAXQDA/24.7.0/MAXQDA.MAXQDA.installer.yaml
@@ -1,13 +1,12 @@
-# Created using wingetcreate 1.6.1.0
+# Created using wingetcreate 1.9.4.0
 # yaml-language-server: $schema=https://aka.ms/winget-manifest.installer.1.9.0.schema.json
 
 PackageIdentifier: MAXQDA.MAXQDA
 PackageVersion: 24.7.0
-MinimumOSVersion: 7.0.0.0
-InstallerType: msi
+InstallerType: wix
 Scope: machine
 UpgradeBehavior: install
-ProductCode: "{B175554E-BB26-4ED1-AD4F-18E5917C9FC3}"
+ProductCode: '{B175554E-BB26-4ED1-AD4F-18E5917C9FC3}'
 Installers:
   - Architecture: x64
     # Alternative Download Link: https://www.maxqda.de/updates/24/MAXQDA24_Setup.msi
