--- a/manifests/n/NTKERNEL/WireSockVPNClient/2.2.1/NTKERNEL.WireSockVPNClient.locale.ru-RU.yaml
+++ b/manifests/n/NTKERNEL/WireSockVPNClient/2.2.1/NTKERNEL.WireSockVPNClient.locale.ru-RU.yaml
@@ -8,7 +8,7 @@ Publisher: NT Kernel
 PackageName: WireSock Secure Connect
 License: Бесплатно для личного (некоммерческого) или образовательного использования (включая некоммерческие организации).
 LicenseUrl: https://www.wiresock.net/license/wiresock_eula.html
-ShortDescription: WireSock Secure Connect — это продвинутый VPN-клиент WireGuard для Windows. Он предлагает расширенные возможности по сравнению с официальным приложением WireGuard, включая селективное туннелирование приложений и исключение IP-адресов.
+ShortDescription: WireSock Secure Connect — это продвинутый VPN-клиент WireGuard для Windows. Он предлагает расширенные возможности по сравнению с официальным приложением WireGuard, включая туннелирование избранных приложений и исключение IP-адресов.
 Tags:
 - wireguard
 - vpn
