--- a/manifests/f/FilenCloud/FilenSync/3.0.4/FilenCloud.FilenSync.locale.en-US.yaml
+++ b/manifests/f/FilenCloud/FilenSync/3.0.4/FilenCloud.FilenSync.locale.en-US.yaml
@@ -10,7 +10,7 @@ PublisherSupportUrl: https://support.filen.io
 PrivacyUrl: https://filen.io/privacy
 Author: Filen Cloud Dienste UG
 PackageName: Filen Sync
-PackageUrl: https://filen.io/apps
+PackageUrl: https://filen.io
 License: Modified Read Only License
 LicenseUrl: https://github.com/FilenCloudDienste/filen-desktop/blob/master/LICENSE.md
 Copyright: © 2021 Filen Cloud Dienste UG
