Apply suggestions from code review
- Add "ArchiveBinariesDependOnPath" property for DLL loading.

Co-authored-by: Kaleb Luedtke <trenlymc@gmail.com>

--- a/manifests/d/Dege/dgVoodoo2/2.84.1/Dege.dgVoodoo2.installer.yaml
+++ b/manifests/d/Dege/dgVoodoo2/2.84.1/Dege.dgVoodoo2.installer.yaml
@@ -5,6 +5,7 @@ PackageIdentifier: Dege.dgVoodoo2
 PackageVersion: 2.84.1
 InstallerType: zip
 NestedInstallerType: portable
+ArchiveBinariesDependOnPath: true
 InstallModes:
   - interactive
   - silent
