--- a/manifests/n/NoMoreFood/PuTTY-CAC/0.83.0.1/NoMoreFood.PuTTY-CAC.installer.yaml
+++ b/manifests/n/NoMoreFood/PuTTY-CAC/0.83.0.1/NoMoreFood.PuTTY-CAC.installer.yaml
@@ -17,7 +17,7 @@ Installers:
   Architecture: x64
   InstallerType: wix
   Scope: machine
-  InstallerUrl: https://github.com/NoMoreFood/putty-cac/raw/0.83/binaries/puttycac-0.83u1-x64.msi
+  InstallerUrl: https://github.com/NoMoreFood/putty-cac/raw/0.83u1/binaries/puttycac-0.83u1-x64.msi
   InstallerSha256: B49B5B4540A9633D1864560A4073A66EC28ECF227515584BCEE347FA581A6D47
   UpgradeBehavior: install
   ProductCode: '{FCE68215-672D-4204-BBF5-7B06AA4C622A}'
@@ -25,7 +25,7 @@ Installers:
   Architecture: x86
   InstallerType: wix
   Scope: machine
-  InstallerUrl: https://github.com/NoMoreFood/putty-cac/raw/0.83/binaries/puttycac-0.u1-x86.msi
+  InstallerUrl: https://github.com/NoMoreFood/putty-cac/raw/0.83u1/binaries/puttycac-0.u1-x86.msi
   InstallerSha256: 0BA5265C903BA6DE813A7BB0CED4CD6AA05A10A245045F6696181938C83DB6C9
   UpgradeBehavior: install
   ProductCode: '{2E9A702A-6B8C-424A-981E-2621F3BDC657}'
@@ -33,7 +33,7 @@ Installers:
   Architecture: arm64
   InstallerType: wix
   Scope: machine
-  InstallerUrl: https://github.com/NoMoreFood/putty-cac/raw/0.83/binaries/puttycac-0.83u1-arm64.msi
+  InstallerUrl: https://github.com/NoMoreFood/putty-cac/raw/0.83u1/binaries/puttycac-0.83u1-arm64.msi
   InstallerSha256: 309AF28D225628682F01FECEA91104D43EEAC19E3523F4B47EF1A3CDFBDA1AF9
   UpgradeBehavior: install
   ProductCode: '{4816CC73-0EBE-48FF-B3AD-C325618F1741}'
@@ -41,7 +41,7 @@ Installers:
   Architecture: arm
   InstallerType: wix
   Scope: machine
-  InstallerUrl: https://github.com/NoMoreFood/putty-cac/raw/0.83/binaries/puttycac-0.83u1-arm.msi
+  InstallerUrl: https://github.com/NoMoreFood/putty-cac/raw/0.83u1/binaries/puttycac-0.83u1-arm.msi
   InstallerSha256: C92A3923C3FF5729D01FBAC0602CFC9CCDA6E83FD9618ED6EC9C3F024E23F783
   UpgradeBehavior: install
   ProductCode: '{078CF3CF-563B-4F09-8EEF-BFC226F187F0}'
