--- a/manifests/n/NoMoreFood/PuTTY-CAC/0.83.0.1/NoMoreFood.PuTTY-CAC.installer.yaml
+++ b/manifests/n/NoMoreFood/PuTTY-CAC/0.83.0.1/NoMoreFood.PuTTY-CAC.installer.yaml
@@ -25,7 +25,7 @@ Installers:
   Architecture: x86
   InstallerType: wix
   Scope: machine
-  InstallerUrl: https://github.com/NoMoreFood/putty-cac/raw/0.83u1/binaries/puttycac-0.u1-x86.msi
+  InstallerUrl: https://github.com/NoMoreFood/putty-cac/raw/0.83u1/binaries/puttycac-0.83u1-x86.msi
   InstallerSha256: 0BA5265C903BA6DE813A7BB0CED4CD6AA05A10A245045F6696181938C83DB6C9
   UpgradeBehavior: install
   ProductCode: '{2E9A702A-6B8C-424A-981E-2621F3BDC657}'
