--- a/manifests/o/Orbmu2k/nvidiaProfileInspector/2.4.0.16/Orbmu2k.nvidiaProfileInspector.installer.yaml
+++ b/manifests/o/Orbmu2k/nvidiaProfileInspector/2.4.0.16/Orbmu2k.nvidiaProfileInspector.installer.yaml
@@ -9,6 +9,9 @@ NestedInstallerFiles:
 - RelativeFilePath: nvidiaProfileInspector.exe
   PortableCommandAlias: nvidiaProfileInspector
 ArchiveBinariesDependOnPath: true
+Dependencies:
+  PackageDependencies:
+    - PackageIdentifier: Microsoft.DotNet.Framework.DeveloperPack_4
 Installers:
 - Architecture: x86
   InstallerUrl: https://github.com/Orbmu2k/nvidiaProfileInspector/releases/latest/download/nvidiaProfileInspector.zip
