--- a/manifests/z/Zwylair/BetterDiscordAutoInstaller/1.3.0/Zwylair.BetterDiscordAutoInstaller.installer.yaml
+++ b/manifests/z/Zwylair/BetterDiscordAutoInstaller/1.3.0/Zwylair.BetterDiscordAutoInstaller.installer.yaml
@@ -3,6 +3,9 @@
 
 PackageIdentifier: Zwylair.BetterDiscordAutoInstaller
 PackageVersion: 1.3.0
+Dependencies:
+  PackageDependencies:
+    - PackageIdentifier: Microsoft.VCRedist.2015+.x64
 Installers:
 - Architecture: x64
   InstallerType: portable
