--- a/manifests/i/ItchIo/Itch/26.1.9/ItchIo.Itch.installer.yaml
+++ b/manifests/i/ItchIo/Itch/26.1.9/ItchIo.Itch.installer.yaml
@@ -8,6 +8,9 @@ NestedInstallerType: exe
 NestedInstallerFiles:
 - RelativeFilePath: itch-setup.exe
 Scope: user
+InstallModes:
+- interactive
+- silent
 InstallerSwitches:
   Silent: --silent
   SilentWithProgress: --silent
