--- a/manifests/i/ItchIo/Itch/26.1.9/ItchIo.Itch.locale.zh-CN.yaml
+++ b/manifests/i/ItchIo/Itch/26.1.9/ItchIo.Itch.locale.zh-CN.yaml
@@ -3,7 +3,7 @@
 
 PackageIdentifier: ItchIo.Itch
 PackageVersion: 26.1.9
-PackageLocale: en-US
+PackageLocale: zh-CN
 # Publisher:
 # PublisherUrl:
 # PublisherSupportUrl:
