--- a/manifests/b/ByteDance/Trae/1.96.4/ByteDance.Trae.installer.yaml
+++ b/manifests/b/ByteDance/Trae/1.96.4/ByteDance.Trae.installer.yaml
@@ -154,6 +154,15 @@ FileExtensions:
 ReleaseDate: 2025-02-16
 Installers:
 - Architecture: x64
+  InstallerUrl: https://lf-cdn.trae.ai/obj/trae-ai-us/pkg/app/releases/stable/1.0.6690/win32/Trae-Setup-x64.exe
+  InstallerSha256: 22A94AED4907364877574DF3BB2EADE18653FDAF9B764B4749D57DCE63E4FCED
+  ProductCode: '{1082AAEF-E2C3-4ABD-8789-9861082B709F}_is1'
+# - Architecture: x64
+#   InstallerUrl: https://lf-cdn.trae.ai/obj/trae-ai-sg/pkg/app/releases/stable/1.0.6690/win32/Trae-Setup-x64.exe
+#   InstallerSha256: 22A94AED4907364877574DF3BB2EADE18653FDAF9B764B4749D57DCE63E4FCED
+#   ProductCode: '{1082AAEF-E2C3-4ABD-8789-9861082B709F}_is1'
+- InstallerLocale: zh-CN
+  Architecture: x64
   InstallerUrl: https://lf-trae.toscdn.com/obj/trae-ai-cn/pkg/app/releases/stable/1.0.6690/win32/Trae-Setup-x64.exe
   InstallerSha256: 22A94AED4907364877574DF3BB2EADE18653FDAF9B764B4749D57DCE63E4FCED
   ProductCode: '{1082AAEF-E2C3-4ABD-8789-9861082B709F}_is1'
