--- a/manifests/e/eParaksts/eParakstsTokenSigning/2.3.7/eParaksts.eParakstsTokenSigning.installer.yaml
+++ b/manifests/e/eParaksts/eParakstsTokenSigning/2.3.7/eParaksts.eParakstsTokenSigning.installer.yaml
@@ -11,6 +11,10 @@ AppsAndFeaturesEntries:
 - ProductCode: '{5B7F376B-080D-4F76-AC5F-47345FD4903A}'
   UpgradeCode: '{0B4CCDDE-76E7-44C2-897A-F3AAA36B7386}'
 Installers:
+- Architecture: x86
+  InstallerUrl: https://www.eparaksts.lv/files/ep3/eparaksts-token-signing-2.3.7.msi
+  InstallerSha256: 9FE63F4EC424833D70E2F0700AF3A7F53D525431C8BABFF8B4B18FB53983DB97
+  ProductCode: '{5B7F376B-080D-4F76-AC5F-47345FD4903A}'
 - Architecture: x64
   InstallerUrl: https://www.eparaksts.lv/files/ep3/eparaksts-token-signing-2.3.7.msi
   InstallerSha256: 9FE63F4EC424833D70E2F0700AF3A7F53D525431C8BABFF8B4B18FB53983DB97
