--- a/manifests/h/HaiYing/OfficeAIServer/1.0.10/HaiYing.OfficeAIServer.installer.yaml
+++ b/manifests/h/HaiYing/OfficeAIServer/1.0.10/HaiYing.OfficeAIServer.installer.yaml
@@ -8,7 +8,7 @@ Scope: user
 UpgradeBehavior: install
 Installers:
 - Architecture: x86
-  InstallerUrl: https://download.office-ai.cn/bin/OfficeAI_Server.exe
+  InstallerUrl: https://downloadcdn.office-ai.cn/bin/OfficeAI_Server.exe
   InstallerSha256: AA140077400EF7BF4ABE1BE272193BFDB4FCEB740E575529C29A5B66148926E0
   ProductCode: '{B0A6E643-BE66-4E2E-82AB-4E63CD407EDE}_is1'
 ManifestType: installer
