--- a/manifests/j/JLC/LCEDA/Pro/2.2.36.3/JLC.LCEDA.Pro.locale.zh-CN.yaml
+++ b/manifests/j/JLC/LCEDA/Pro/2.2.36.3/JLC.LCEDA.Pro.locale.zh-CN.yaml
@@ -19,6 +19,18 @@ Tags:
 - eda
 - pcb
 - 电子设计自动化
+ReleaseNotes: |-
+  - 修复某些复杂图片生成 Gerber 缺失细节的问题
+  - 修复很多 API 的 bug
+  - 修复移除全部布线会把锁定过孔移除的问题
+  - 修复鼠标悬浮在焊盘有些没有高亮的问题
+  - 修复某些约束区域的铺铜之间的间距没有按照约束区域生成的问题
+  - 修复某些场景添加泪滴报错的问题
+  - 修复底部面板有时无法加载预览的问题
+  - 修复某些复用模块复制后切换图元粘贴失败的问题
+  - 修复器件管理器列表不能多选的问题
+  - PCB 元件的属性下拉取值调整为封装+器件的属性
+  - 修复一些格式转换的问题
 ReleaseNotesUrl: https://pro.lceda.cn/page/update-record
 PurchaseUrl: https://lceda.cn/page/pricing
 Documentations:
