--- a/manifests/b/Bochs/Bochs/3.0/Bochs.Bochs.locale.en-US.yaml
+++ b/manifests/b/Bochs/Bochs/3.0/Bochs.Bochs.locale.en-US.yaml
@@ -10,7 +10,7 @@ PublisherSupportUrl: https://github.com/bochs-emu/Bochs/issues
 # PrivacyUrl:
 # Author:
 PackageName: Bochs
-PackageUrl: https://bochs.sourceforge.io/
+PackageUrl: https://bochs.sourceforge.io/getcurrent.html
 License: LGPL-2.1
 LicenseUrl: https://github.com/bochs-emu/Bochs/blob/HEAD/LICENSE
 Copyright: © 2001-2025 The Bochs Project.
