--- a/manifests/t/TheWaWaR/simple-http-server/0.6.10/TheWaWaR.simple-http-server.installer.yaml
+++ b/manifests/t/TheWaWaR/simple-http-server/0.6.10/TheWaWaR.simple-http-server.installer.yaml
@@ -14,5 +14,7 @@ Installers:
 - Architecture: x64
   InstallerUrl: https://github.com/TheWaWaR/simple-http-server/releases/download/v0.6.10/x86_64-pc-windows-msvc-simple-http-server.exe
   InstallerSha256: F900EB5CDB64E3219949F83241E0C0C1FF06EECBE9A191AF92F4A1BCDECA5F50
+  AppsAndFeaturesEntries:
+    - DisplayVersion: 0.6.10
 ManifestType: installer
 ManifestVersion: 1.9.0
