--- a/manifests/a/AnyDesk/AnyDesk/9.0.4/AnyDesk.AnyDesk.locale.en-US.yaml
+++ b/manifests/a/AnyDesk/AnyDesk/9.0.4/AnyDesk.AnyDesk.locale.en-US.yaml
@@ -1,20 +1,20 @@
-# Created using wingetcreate 1.9.4.0
+# Created with YamlCreate.ps1 v2.4.3 $debug=QUSU.CRLF.7-5-0.Win32NT
 # yaml-language-server: $schema=https://aka.ms/winget-manifest.defaultLocale.1.9.0.schema.json
 
 PackageIdentifier: AnyDesk.AnyDesk
-PackageVersion: 9.0.2
+PackageVersion: 9.0.4
 PackageLocale: en-US
 Publisher: AnyDesk Software GmbH
 PublisherUrl: https://anydesk.com/
-PublisherSupportUrl: https://anydesk.com/en/contact
-PrivacyUrl: https://anydesk.com/en/privacy
+PublisherSupportUrl: https://anydesk.com/contact
+PrivacyUrl: https://anydesk.com/privacy
 Author: AnyDesk Software GmbH
 PackageName: AnyDesk
 PackageUrl: https://anydesk.com/
 License: Proprietary
-LicenseUrl: https://anydesk.com/en/terms
-Copyright: © 2023 AnyDesk Software GmbH
-CopyrightUrl: https://anydesk.com/en/terms
+LicenseUrl: https://anydesk.com/terms
+Copyright: © 2025 AnyDesk Software GmbH
+CopyrightUrl: https://anydesk.com/terms
 ShortDescription: AnyDesk is a German proprietary remote desktop tool distributed by AnyDesk Software GmbH.
 Description: |-
   Connect to a computer remotely, be it from the other end of the office or halfway around the world.
@@ -24,11 +24,14 @@ Tags:
 - rdp
 - remote-control
 - remote-desktop
-PurchaseUrl: https://anydesk.com/en/pricing/teams
+# ReleaseNotes:
+# ReleaseNotesUrl:
+PurchaseUrl: https://anydesk.com/pricing/teams
+# InstallationNotes:
 Documentations:
-- DocumentLabel: FAQ
-  DocumentUrl: https://support.anydesk.com/knowledge/faq
 - DocumentLabel: Knowledge Hub
   DocumentUrl: https://support.anydesk.com/knowledge
+- DocumentLabel: FAQ
+  DocumentUrl: https://support.anydesk.com/knowledge/faq
 ManifestType: defaultLocale
 ManifestVersion: 1.9.0
