Add Protocols and FileExtensions

--- a/manifests/a/AnyDesk/AnyDesk/9.0.4/AnyDesk.AnyDesk.installer.yaml
+++ b/manifests/a/AnyDesk/AnyDesk/9.0.4/AnyDesk.AnyDesk.installer.yaml
@@ -15,6 +15,10 @@ InstallerSwitches:
   Upgrade: --remove-first
   Custom: --update-auto --create-desktop-icon --create-shortcuts
 UpgradeBehavior: install
+Protocols:
+- anydesk
+FileExtensions:
+- anydesk
 ElevationRequirement: elevationRequired
 Installers:
 - Architecture: x86
