--- a/manifests/s/SergeyMoskalev/CarambaSwitcher/2024.12.16/SergeyMoskalev.CarambaSwitcher.locale.en-US.yaml
+++ b/manifests/s/SergeyMoskalev/CarambaSwitcher/2024.12.16/SergeyMoskalev.CarambaSwitcher.locale.en-US.yaml
@@ -12,7 +12,7 @@ Author: Sergey Moskalev
 PackageName: Caramba Switcher
 PackageUrl: https://caramba-switcher.com/update
 License: Proprietary
-LicenseUrl: https://caramba-switcher.com/eula
+# LicenseUrl: https://caramba-switcher.com/eula
 Copyright: © 2018-2024 Sergey Moskalev
 # CopyrightUrl:
 ShortDescription: A smart automatic keyboard layout switcher.
