--- a/manifests/z/Z7LL/Z7LLres/2.5/Z7LL.Z7LLres.installer.yaml
+++ b/manifests/z/Z7LL/Z7LLres/2.5/Z7LL.Z7LLres.installer.yaml
@@ -2,11 +2,11 @@
 # yaml-language-server: $schema=https://aka.ms/winget-manifest.installer.1.9.0.schema.json
 
 PackageIdentifier: Z7LL.Z7LLres
-PackageVersion: "2.5"
+PackageVersion: "2.5.0"
 InstallerType: inno
 Installers:
 - Architecture: x64
-  InstallerUrl: https://firebasestorage.googleapis.com/v0/b/direct-link-b2f83.appspot.com/o/Z7LLres%20Setup.exe?alt=media&token=39dfd6d0-8c03-49ae-9952-3cfdf38f1747
+  InstallerUrl: https://github.com/Z7LL/Z7LLres/releases/download/V2.5.0/Z7LLres.Setup.exe
   InstallerSha256: 7BD1AD4F7FF2B640B9037A5EABA1DB25B4E077FBA581F4092F736444467C9723
 ManifestType: installer
 ManifestVersion: 1.9.0
