--- a/manifests/z/Z7LL/Z7LLres/2.5/Z7LL.Z7LLres.yaml
+++ b/manifests/z/Z7LL/Z7LLres/2.5/Z7LL.Z7LLres.yaml
@@ -4,5 +4,6 @@
 PackageIdentifier: Z7LL.Z7LLres
 PackageVersion: "2.5.0"
 DefaultLocale: en-US
+PackageUrl: https://github.com/Z7LL/Z7LLres
 ManifestType: version
 ManifestVersion: 1.9.0
