--- a/manifests/z/Z7LL/Z7LLres/2.5/Z7LL.Z7LLres.locale.en-US.yaml
+++ b/manifests/z/Z7LL/Z7LLres/2.5/Z7LL.Z7LLres.locale.en-US.yaml
@@ -6,6 +6,7 @@ PackageVersion: "2.5.0"
 PackageLocale: en-US
 Publisher: Z7LL
 PackageName: Z7LLres
+PackageUrl: https://github.com/Z7LL/Z7LLres
 License: MIT License
 ShortDescription: A programme that automate changing Resolution in Fortnite.
 ManifestType: defaultLocale
