--- a/manifests/z/Z7LL/Z7LLres/2.5/Z7LL.Z7LLres.installer.yaml
+++ b/manifests/z/Z7LL/Z7LLres/2.5/Z7LL.Z7LLres.installer.yaml
@@ -3,6 +3,7 @@
 
 PackageIdentifier: Z7LL.Z7LLres
 PackageVersion: "2.5.0"
+PackageUrl: https://github.com/Z7LL/Z7LLres
 InstallerType: inno
 Installers:
 - Architecture: x64
