--- a/manifests/3/3/3Kontakt/5.10.5/3.3Kontakt.installer.yaml
+++ b/manifests/3/3/3Kontakt/5.10.5/3.3Kontakt.installer.yaml
@@ -14,7 +14,7 @@ UpgradeBehavior: install
 ProductCode: '{F8AB0F5D-72DA-4D12-996A-AD02DEBF46FF}'
 ReleaseDate: 2024-06-12
 AppsAndFeaturesEntries:
-  UpgradeCode: '{C2D29468-9E3D-4E62-8EAE-E7B0FDF63D6E}'
+- UpgradeCode: '{C2D29468-9E3D-4E62-8EAE-E7B0FDF63D6E}'
 Installers:
 - Architecture: x64
   InstallerUrl: https://softphone-3kontakt.3.dk/softphone/DK/3kontakt_x64.msi
