--- a/manifests/v/VoodooSoft/DefenderUI/1.33/VoodooSoft.DefenderUI.locale.en-US.yaml
+++ b/manifests/v/VoodooSoft/DefenderUI/1.33/VoodooSoft.DefenderUI.locale.en-US.yaml
@@ -1,12 +1,11 @@
-# Created with YamlCreate.ps1 v2.4.1 Dumplings Mod $debug=QUSU.CRLF.7-4-5.Win32NT
-# yaml-language-server: $schema=https://aka.ms/winget-manifest.defaultLocale.1.6.0.schema.json
+# Created with YamlCreate.ps1 Dumplings Mod
+# yaml-language-server: $schema=https://aka.ms/winget-manifest.defaultLocale.1.9.0.schema.json
 
 PackageIdentifier: VoodooSoft.DefenderUI
-PackageVersion: "1.30"
+PackageVersion: "1.33"
 PackageLocale: en-US
 Publisher: VoodooSoft, LLC
 PublisherUrl: https://voodooshield.com/
-# PublisherSupportUrl:
 PrivacyUrl: https://voodooshield.com/Privacy.aspx
 Author: VoodooSoft, LLC
 PackageName: DefenderUI
@@ -14,20 +13,13 @@ PackageUrl: https://www.defenderui.com/
 License: Proprietary
 LicenseUrl: https://voodooshield.com/Terms.aspx
 Copyright: © 2024 - DefenderUI
-# CopyrightUrl:
 ShortDescription: A better UI for Microsoft Defender
 Description: Microsoft Defender needed a better UI, so we built one. DefenderUI significantly improves usability & unlocks many hidden security features of Microsoft Defender. Compatible with Windows 10 / 11 & truly free.
-# Moniker:
 Tags:
 - antivirus
 - defender
 - microsoft-defender
 - security
 - windows-defender
-# ReleaseNotes:
-# ReleaseNotesUrl:
-# PurchaseUrl:
-# InstallationNotes:
-# Documentations:
 ManifestType: defaultLocale
-ManifestVersion: 1.6.0
+ManifestVersion: 1.9.0
