--- a/manifests/c/calibre/calibre/portable/7.26.0.0/calibre.calibre.portable.installer.yaml
+++ b/manifests/c/calibre/calibre/portable/7.26.0.0/calibre.calibre.portable.installer.yaml
@@ -13,7 +13,7 @@ InstallerSwitches:
 UpgradeBehavior: uninstallPrevious
 Installers:
 - Architecture: x64
-  InstallerUrl: https://github.com/kovidgoyal/calibre/releases/download/v7.26.0/calibre-portable-installer-7.26.0.exe
+  InstallerUrl: https://download.calibre-ebook.com/7.26.0/calibre-portable-installer-7.26.0.exe
   InstallerSha256: CD7BEAC411367DD2051CBE0479F5F44DB4A4D03F8D8F0527E7DD541D8827063C
 ManifestType: installer
 ManifestVersion: 1.9.0
