--- a/manifests/e/eSpeak-NG/eSpeak-NG/1.52.0/eSpeak-NG.eSpeak-NG.installer.yaml
+++ b/manifests/e/eSpeak-NG/eSpeak-NG/1.52.0/eSpeak-NG.eSpeak-NG.installer.yaml
@@ -12,6 +12,9 @@ AppsAndFeaturesEntries:
   DisplayVersion: 1.51.0
   ProductCode: '{3DA6DF03-E5CD-4A93-B06F-707484742BAB}'
   UpgradeCode: '{B4F779EB-AC6C-49D2-A12D-4871E4520C0F}'
+Dependencies:
+  PackageDependencies:
+    - PackageIdentifier: Microsoft.VCRedist.2015+.x64
 Installers:
 - Architecture: x64
   InstallerUrl: https://github.com/espeak-ng/espeak-ng/releases/download/1.52.0/espeak-ng.msi
