Add ProductCode and AppsAndFeaturesEntries

--- a/manifests/o/Omnissa/HorizonClient/8.14.0.20607/Omnissa.HorizonClient.installer.yaml
+++ b/manifests/o/Omnissa/HorizonClient/8.14.0.20607/Omnissa.HorizonClient.installer.yaml
@@ -11,7 +11,11 @@ UpgradeBehavior: install
 Protocols:
 - horizon-client
 - vmware-view
+ProductCode: '{77890822-2c7e-4952-a6be-14cfc7861c6e}'
 ReleaseDate: 2024-12-23
+AppsAndFeaturesEntries:
+- ProductCode: '{77890822-2c7e-4952-a6be-14cfc7861c6e}'
+  UpgradeCode: '{80DDA089-E499-4962-9B6A-6A971A8B8FC9}'
 Installers:
 - Architecture: x64
   InstallerUrl: https://download3.omnissa.com/software/CART25FQ4_WIN_2412/Omnissa-Horizon-Client-2412-8.14.0-12437220870.exe
