Update Orbmu2k.nvidiaProfileInspector.installer.yaml to require NetFx4
Modified the installation manifest to call upon a Windows Optional Feature that corresponds to .NET Framework 4.8.1 (NetFx4).

This feature should come enabled by default since Windows 8.1, but the application will not run without it, so we'll check for it just in case.

--- a/manifests/o/Orbmu2k/nvidiaProfileInspector/2.4.0.16/Orbmu2k.nvidiaProfileInspector.installer.yaml
+++ b/manifests/o/Orbmu2k/nvidiaProfileInspector/2.4.0.16/Orbmu2k.nvidiaProfileInspector.installer.yaml
@@ -10,8 +10,8 @@ NestedInstallerFiles:
   PortableCommandAlias: nvidiaProfileInspector
 ArchiveBinariesDependOnPath: true
 Dependencies:
-  PackageDependencies:
-    - PackageIdentifier: Microsoft.DotNet.Framework.DeveloperPack_4
+  WindowsFeatures:
+    - NetFx4
 Installers:
 - Architecture: x86
   InstallerUrl: https://github.com/Orbmu2k/nvidiaProfileInspector/releases/latest/download/nvidiaProfileInspector.zip
