--- a/manifests/o/Omnissa/HorizonClient/8.14.0.20607/Omnissa.HorizonClient.installer.yaml
+++ b/manifests/o/Omnissa/HorizonClient/8.14.0.20607/Omnissa.HorizonClient.installer.yaml
@@ -7,12 +7,15 @@ InstallerType: burn
 Scope: machine
 InstallerSwitches:
   InstallLocation: INSTALLDIR="<INSTALLPATH>"
+  Log: " "
 UpgradeBehavior: install
 Protocols:
 - horizon-client
 - vmware-view
 ProductCode: '{77890822-2c7e-4952-a6be-14cfc7861c6e}'
 ReleaseDate: 2024-12-23
+UnsupportedArguments:
+- log
 AppsAndFeaturesEntries:
 - ProductCode: '{77890822-2c7e-4952-a6be-14cfc7861c6e}'
   UpgradeCode: '{80DDA089-E499-4962-9B6A-6A971A8B8FC9}'
