--- a/manifests/c/CrossPlusA/Balabolka/2.15.0.888/CrossPlusA.Balabolka.installer.yaml
+++ b/manifests/c/CrossPlusA/Balabolka/2.15.0.888/CrossPlusA.Balabolka.installer.yaml
@@ -4,25 +4,33 @@
 PackageIdentifier: CrossPlusA.Balabolka
 PackageVersion: 2.15.0.888
 InstallerType: zip
-NestedInstallerType: exe # CreateInstall
-NestedInstallerFiles:
-- RelativeFilePath: setup.exe
-InstallModes:
-- interactive
-- silent
-- silentWithProgress
-InstallerSwitches:
-  Silent: -silent
-  SilentWithProgress: -silent
-UpgradeBehavior: install
 FileExtensions:
 - bxt
 - bxz
 ReleaseDate: 2025-02-15
 Installers:
 - Architecture: x86
+  NestedInstallerType: exe # CreateInstall
+  NestedInstallerFiles:
+  - RelativeFilePath: setup.exe
   InstallerUrl: https://www.cross-plus-a.com/balabolka.zip
   InstallerSha256: 3978EBA38F20A69B19168C8A421880583AF62017DB732C728A6E286A1C36B895
+  InstallModes:
+  - interactive
+  - silent
+  - silentWithProgress
+  InstallerSwitches:
+    Silent: -silent
+    SilentWithProgress: -silent
   ProductCode: Balabolka
+  UpgradeBehavior: install
+- Architecture: x86
+  NestedInstallerType: portable
+  NestedInstallerFiles:
+  - RelativeFilePath: Balabolka\balabolka.exe
+  InstallerUrl: https://www.cross-plus-a.com/balabolka_portable.zip
+  InstallerSha256: 4D458078D6C4A434B2D86E587C1208E76CA5FAECC160AA0DDDA4038072BCA886
+  UpgradeBehavior: uninstallPrevious
+  ArchiveBinariesDependOnPath: true
 ManifestType: installer
 ManifestVersion: 1.9.0
