Fix locale and header

--- a/manifests/j/JiangGujin/OllamaDesktop/0.0.3/JiangGujin.OllamaDesktop.locale.zh-CN.yaml
+++ b/manifests/j/JiangGujin/OllamaDesktop/0.0.3/JiangGujin.OllamaDesktop.locale.zh-CN.yaml
@@ -1,9 +1,9 @@
 # Created with YamlCreate.ps1 v2.4.3 $debug=NVS1.CRLF.7-5-0.Win32NT
-# yaml-language-server: $schema=https://aka.ms/winget-manifest.defaultLocale.1.9.0.schema.json
+# yaml-language-server: $schema=https://aka.ms/winget-manifest.locale.1.9.0.schema.json
 
 PackageIdentifier: JiangGujin.OllamaDesktop
 PackageVersion: 0.0.3
-PackageLocale: en-US
+PackageLocale: zh-CN
 Publisher: Jianggujin
 PublisherUrl: https://www.jianggujin.com/
 PublisherSupportUrl: https://github.com/jianggujin/ollama-desktop/issues
@@ -39,5 +39,5 @@ ReleaseNotesUrl: https://github.com/jianggujin/ollama-desktop/releases/tag/v0.0.
 # PurchaseUrl:
 # InstallationNotes:
 # Documentations:
-ManifestType: defaultLocale
+ManifestType: locale
 ManifestVersion: 1.9.0
