Apply suggestions from code review
- Switch domain suffix of the package
- Prevent false positive report of region blocking

Co-authored-by: 鸭鸭「カモ」 <89643991+DuckDuckStudio@users.noreply.github.com>

--- a/manifests/g/GIGABYTE/GigabyteControlCenter/25.02.07.01/GIGABYTE.GigabyteControlCenter.locale.zh-CN.yaml
+++ b/manifests/g/GIGABYTE/GigabyteControlCenter/25.02.07.01/GIGABYTE.GigabyteControlCenter.locale.zh-CN.yaml
@@ -5,12 +5,12 @@ PackageIdentifier: GIGABYTE.GigabyteControlCenter
 PackageVersion: 25.02.07.01
 PackageLocale: zh-CN
 Publisher: 技嘉科技股份有限公司
-PublisherUrl: https://www.gigabyte.cn
+PublisherUrl: https://www.gigabyte.com
 # PublisherSupportUrl:
 PrivacyUrl: https://profile.gigabyte.com/PrivacyPolicy.aspx?l=zh-CN
 Author: 技嘉科技股份有限公司
 PackageName: Gigabyte Control Center (GCC)
-PackageUrl: https://www.gigabyte.cn/Consumer/Software/GIGABYTE-Control-Center/
+PackageUrl: https://www.gigabyte.com/Consumer/Software/GIGABYTE-Control-Center/
 License: 专有软件
 # LicenseUrl:
 Copyright: (c)2024 技嘉科技股份有限公司。 著作权所有，并保留一切权利。
