Add dependency for VCRedist
Co-authored-by: Stephen Gillie <114952565+stephengillie@users.noreply.github.com>

--- a/manifests/g/getzola/zola/0.20.0/getzola.zola.installer.yaml
+++ b/manifests/g/getzola/zola/0.20.0/getzola.zola.installer.yaml
@@ -9,6 +9,9 @@ NestedInstallerFiles:
 - RelativeFilePath: zola.exe
   PortableCommandAlias: zola
 ReleaseDate: 2025-02-14
+Dependencies:
+  PackageDependencies:
+    - PackageIdentifier: Microsoft.VCRedist.2015+.x64
 Installers:
 - Architecture: x64
   InstallerUrl: https://github.com/getzola/zola/releases/download/v0.20.0/zola-v0.20.0-x86_64-pc-windows-msvc.zip
