New version: CyberGhost.CyberGhost version 8.4.11.14569

--- a/manifests/c/CyberGhost/CyberGhost/8.4.11.14569/CyberGhost.CyberGhost.locale.en-US.yaml
+++ b/manifests/c/CyberGhost/CyberGhost/8.4.11.14569/CyberGhost.CyberGhost.locale.en-US.yaml
@@ -2,7 +2,7 @@
 # yaml-language-server: $schema=https://aka.ms/winget-manifest.defaultLocale.1.9.0.schema.json
 
 PackageIdentifier: CyberGhost.CyberGhost
-PackageVersion: 8.4.10.14516
+PackageVersion: 8.4.11.14569
 PackageLocale: en-US
 Publisher: CyberGhost S.R.L.
 PublisherUrl: https://www.cyberghostvpn.com/
@@ -22,10 +22,8 @@ Tags:
 - security
 - vpn
 ReleaseNotes: |-
-  - Added a dialog to repair disabled Wi-Fi protection (by disabled location settings)
-  - Fixed task bar flicker
-  - Reduced location service entries
-  - Removed Privacy Guard's conflicting location service options
+  - Fixed connect on launch (conflicting with Wi-Fi protection)
+  - Fixed delay connect on launch
 ReleaseNotesUrl: https://download.cyberghostvpn.com/windows/cg8-changelog/index.html
 PurchaseUrl: https://www.cyberghostvpn.com/buy
 ManifestType: defaultLocale
